--- a/app/webpacker/stylesheets/index.scss
+++ b/app/webpacker/stylesheets/index.scss
@@ -574,6 +574,7 @@ label.list__item {
 .featured-image-placeholder {
   width: 100%;
   height: 100%;
+  min-height: 100px;
   background: rgba(0, 0, 0, 0.05);
   display: flex;
   align-items: center;
